Bug 290620 - Translation bug in context-menu
Summary: Translation bug in context-menu
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-04 18:56 UTC by Sergo
Modified: 2015-11-01 02:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments
2 screenshots in zip archive with translated and untranslated strings (73.67 KB, application/zip)
2012-01-04 18:56 UTC, Sergo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sergo 2012-01-04 18:56:51 UTC
Created attachment 67458 [details]
2 screenshots in zip archive with translated and untranslated strings

Version:           1.7 (using KDE 4.7.4) 
OS:                Linux

Very strange translation bug. After launching Dolphin and right mouse-click context-menu appears. Everything is translated, but one string "Paste clipboard contents..." is not translated. If I enter into any folder and right-clicking, context menu appears with all strings translated include Paste.
My language is russian, I use russian KDE

Reproducible: Always

Steps to Reproduce:
1. Open Dolphin.
2. Right-click. Context-menu appears with one string untranslated.
3. Enter any folder.
4. Right-click. Context-menu with all strings translated.


Expected Results:  
translated menu

OS: Linux (x86_64) release 3.1.0-1.2-desktop
Compiler: gcc
openSUSE 12.1
russian
Comment 1 Burkhard Lück 2012-01-05 02:58:50 UTC
This is not reproducable with

1) kubuntu 11.04 locale de
dolphin --version
Qt: 4.7.2
KDE: 4.7.2 (4.7.2)
Dolphin: 1.7

2) branch 4.7 compiled from sources locale de
$ dolphin --version
Qt: 4.7.2
KDE: 4.7.3 (4.7.3)
Dolphin: 1.7

3) master compiled from sources locale x-test
$ dolphin --version
xxQt: 4.8.0
KDE Development Platform: 4.7.4 (4.7.4)
xxDolphinxx: 1.99
xx
Comment 2 Sergo 2012-01-05 10:14:40 UTC
I now reinstalled my system. The bug is present.
:~> dolphin --version
Qt: 4.7.4
KDE: 4.7.4 (4.7.4) "release 11"
Dolphin: 1.7
Comment 3 Alexander Potashev 2012-03-14 23:05:14 UTC
I can confirm the bug on openSUSE 12.1 + KDE SC 4.8.1.

@Artem Sereda: Why are you ignoring bug reports for i18n/ru?
Comment 4 Alexander Potashev 2012-03-15 00:00:20 UTC
Dear Dolphin developers,

The message "Paste Clipboard Contents..." is not getting translated in the beginning, because `insertCatalog("libkonq")` is called too late in `src/main.cpp`. It seems that the translation of the messages "Paste Clipboard Contents..." is "calculated" and cached during initialization of the `DolphinApplication app` object.

I have tested the following working solution: Move the `insertCatalog(libkonq)` call from `src/main.cpp` to the very beginning of the `DolphinApplication` constructor (I put it even before `m_mainWindow = new DolphinMainWindow();`).
Comment 5 Peter Penz 2012-03-15 08:45:20 UTC
Thanks a lot Alexander, I'll apply your patch during the next days.
Comment 6 Peter Penz 2012-03-19 14:32:19 UTC
Git commit b63b4bc45abb7715e4800bd103163b51cc32f4f5 by Peter Penz.
Committed on 19/03/2012 at 15:30.
Pushed by ppenz into branch 'master'.

Fix translation issue in context-menu

Thanks to Alexander Potashev for the patch!
FIXED-IN: 4.8.2

M  +2    -0    dolphin/src/dolphinapplication.cpp
M  +0    -2    dolphin/src/main.cpp

http://commits.kde.org/kde-baseapps/b63b4bc45abb7715e4800bd103163b51cc32f4f5
Comment 7 Peter Penz 2012-03-19 14:32:59 UTC
Git commit 44482f8b66e7e3925f68936d811df0d644f5bc3c by Peter Penz.
Committed on 19/03/2012 at 15:30.
Pushed by ppenz into branch 'KDE/4.8'.

Fix translation issue in context-menu

Thanks to Alexander Potashev for the patch!
FIXED-IN: 4.8.2

M  +2    -0    dolphin/src/dolphinapplication.cpp
M  +0    -2    dolphin/src/main.cpp

http://commits.kde.org/kde-baseapps/44482f8b66e7e3925f68936d811df0d644f5bc3c
Comment 8 Neros 2015-11-01 02:51:40 UTC
This is bug still exists in Dolphin 15.08.2-1 on Archlinux and Fedora 23.

In my case, it's not translated in french.