Fix translation issue in context-menu

Thanks to Alexander Potashev for the patch!

BUG: 290620
FIXED-IN: 4.8.2